fix: fix topMenu align not work

--- a/src/design/global.less
+++ b/src/design/global.less
@@ -26,11 +26,11 @@
 }
 
 .justify-start {
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .justify-end {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .justify-around {
